--- a/my-services/style.css
+++ b/my-services/style.css
@@ -50,6 +50,12 @@ a {
     text-decoration: none;
 }
 
+@media (max-width: 43rem) {
+    h2{
+        font-size: 2.5rem;
+    }
+}
+
 
 /* UTILIDADES */
 .center {
@@ -84,6 +90,27 @@ a {
     background: var(--dark);
     position: sticky;
     top: 0;
+}
+
+@media (max-width: 83rem) {
+    .container {
+        width: 100%;
+    }
+    .nav-bg {
+        position: static;
+    }
+}
+
+@media (max-width: 43rem) {
+    .main-nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    .main-nav a {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
 }
 
 
@@ -132,6 +159,20 @@ hero::after {
     text-transform: uppercase;
 }
 
+@media (max-width: 43rem) {
+    .hero-subtitle {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 0;
+    }
+    .btn {
+        width: 90%;
+        text-align: center;
+    }
+}
+
 /* .positionated {
     position: absolute; /* Se posiciona con referencia al elemento al elemento padre mas cercano */
     /*left: 25rem;
@@ -169,6 +210,10 @@ hero::after {
     align-items: center;
 }
 
+.card p {
+    text-align: center;
+}
+
 .icon-container {
     background-color: var(--dark);
     border-radius: 50%;
@@ -181,7 +226,14 @@ hero::after {
     align-items: center;
 }
 
+@media (max-width: 43rem) {
+    .services-cards {
+        flex-direction: column;
+    }
+}
 
+
+/* FORMULARIO */
 
 fieldset {
     background-color: var(--dark);
@@ -192,6 +244,7 @@ fieldset {
     flex-direction: column;
     gap: 1rem;
     padding: 2.5rem 3rem 4rem 3rem;
+    margin: auto;
 }
 
 legend {
@@ -247,6 +300,21 @@ textarea {
 footer p {
     text-align: center;
     color: var(--white);
+}
+
+
+@media (max-width: 43rem) {
+    fieldset {
+        width: 90%;
+    }
+
+    .form-section1 {
+        flex-direction: column;
+    }
+
+    .half-width {
+        width: 100%;
+    }
 }
 
 
